--- a/assets/sass/_blog-single.scss
+++ b/assets/sass/_blog-single.scss
@@ -53,7 +53,7 @@ blog single
         &--single{ display: flex; justify-content: space-between; position: relative;
             &:nth-child(n+2){ margin-top: 1rem; }
             .image{ width: 10rem; height: 9.8rem; img{ width: 100%; height: 100%; } }
-            .comment{ width: calc(100% - 11rem); border: 4px solid #f0f7fc; padding: 3.6rem 4rem; border-radius: 2rem;
+            .comment{ width: calc(100% - 11rem); border: 4px solid #e3c45a; padding: 3.6rem 4rem; border-radius: 2rem;
                 position: relative;
                 &::before{ content: ""; display: block; position: absolute; background-image: url(../images/comment-corner.png);
                     background-repeat: no-repeat;
@@ -62,7 +62,7 @@ blog single
                 .name{ font-size: 2rem; font-weight: 600; color: $color-black; line-height: 3rem; letter-spacing: -.1rem; }
                 .date{ font-size: 1.4rem; color: $color-para-dark; line-height: 3rem; }
                 .reply-button{ position: absolute; top: 1rem; right: 1rem; width: 8.9rem; height: 4.1rem;
-                    border-radius: 3rem; border: 4px solid #f0f7fc; @include animateIt;
+                    border-radius: 3rem; border: 4px solid #e3c45a; @include animateIt;
                     background: rgb(19,105,236);
                     background: linear-gradient(0deg, rgba(19,105,236,0) 0%, rgba(255,177,107,0) 50%, 
                     rgb(242, 2, 107) 51%, rgba(255,138,175,1) 100%); 
@@ -83,7 +83,7 @@ blog single
                 }
             }
             &.reply{ width: calc(100% - 11rem); margin-left: auto;
-                .comment{ background-color: #f0f7fc; 
+                .comment{ background-color: #e3c45a; 
                     &::before{ background-image: url(../images/reply-corner.png); }
                     .reply-button{ background-color: white; border-color: white; 
                         &:hover{ a{ color: white; } }
@@ -94,7 +94,7 @@ blog single
     }
     .blog{
         &_related{ width: 100vw;
-            &__wrapper{ background-color: #f0f7fc; padding: 10rem 0; }
+            &__wrapper{ background-color: #e3c45a; padding: 10rem 0; }
             &__header{ width: 100%; display: flex; justify-content: space-between; align-items: center; margin-bottom: 4rem;
                 .screenshot-nav-next{ margin-left: 1rem; }
                 h3{ font-size: 3rem; font-weight: 600; color: $color-black; letter-spacing: -.4px; }
@@ -115,7 +115,7 @@ blog single
     .comment_form{ padding-bottom: 10rem;
         &__wrapper{ width: calc(100% - 40rem); margin: 0 auto; 
             h3{ font-size: 3rem; font-weight: 600; letter-spacing: -.4px; color: $color-black; margin-bottom: 5rem; }
-            .input-field{ border-color: #f0f7fc; &:focus{ border-color: #c9deed; } }
+            .input-field{ border-color: #e3c45a; &:focus{ border-color: #c9deed; } }
             .button{ border-color: #ffdbe8; cursor: pointer;
                 i{ color: #f2046c; }
                 background: rgb(19,105,236);
