--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -39,7 +39,7 @@ blog
 .blog{ padding: $section-padding 0;
     &__header{ width: 100%; margin-bottom: 5rem;
         .search{ position: relative; width: 33rem;
-            .input-field{ border-color: #f0f7fc; padding-left: 3rem; }
+            .input-field{ border-color: #e3c45a; padding-left: 3rem; }
             i{ font-size: 2rem; color: #969c9e; position: absolute; top: 50%; 
                 transform: translateY(-50%); -webkit-transform: translateY(-50%); 
                 right: 3.4rem; cursor: pointer;
@@ -121,7 +121,7 @@ blog
     }
 }
 .dropdown-wrapper{ position: relative; width: 27rem;
-.dropdown-box{ border: 4px solid #f0f7fc; border-radius: 2rem; width: 100%; padding: 2rem; z-index: 1000;
+.dropdown-box{ border: 4px solid #e3c45a; border-radius: 2rem; width: 100%; padding: 2rem; z-index: 1000;
     position: absolute; top: 10rem; visibility: hidden; opacity: 0; @include animateIt; background-color: white;
     &.shown{ top: 8.5rem; visibility: visible; opacity: 1; }
     &::before{ content: ""; display: block; position: absolute; background: url(../images/corner.png) no-repeat;
@@ -135,12 +135,12 @@ blog
                 position: absolute; top: 50%; left: 1.7rem; transform: translateY(-50%); -webkit-transform: translateY(-50%); 
                 display: inline-block; color: #cacdce; }
             &:nth-child(n+2){ margin-top: 1rem; }
-            &.selected, &:hover{ color: $color-black; background-color: #f0f7fc; font-weight: 600; }
-            &:hover::before{ color: #f41976; }
+            &.selected, &:hover{ color: $color-black; background-color: #e3c45a; font-weight: 600; }
+            &:hover::before{ color: #10221f; }
         }
     }
 }
-.dropdown-info{ cursor: pointer; border: 4px solid #f0f7fc; border-radius: 3rem; width: 100%; height: 6.5rem;
+.dropdown-info{ cursor: pointer; border: 4px solid #e3c45a; border-radius: 3rem; width: 100%; height: 6.5rem;
     display: flex; align-items: center; padding-left: 3rem; z-index: 0;
     // &::before{ content: "\f103"; font-family: "Font Awesome 5 Pro"; font-size: 2rem; font-weight: 900;
     //     position: absolute; right: 3rem;
