--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -18,7 +18,7 @@ header
   &__nav{
     &-primary{ margin-bottom: 0;
       > li{ list-style: none; display: inline-block;
-        &:first-child{ a{ color: #f41976; } 
+        &:first-child{ a{ color: #10221f; } 
           i{ 
             &::before{ opacity: var(--var-primary-opacity, .5); } 
             &::after{ opacity: var(--var-secondary-opacity, 1); } 
@@ -43,7 +43,7 @@ header
         li{
           a{ font-size: 1.6rem; color: $color-para-dark; border-radius: 2rem; position: relative;
             padding: 1rem 0 1rem 2rem; cursor: pointer; @include animateIt; display: block; }
-            &:hover{ a{ color: $color-black; background-color: #f0f7fc; font-weight: 600; } }
+            &:hover{ a{ color: $color-black; background-color: #e3c45a; font-weight: 600; } }
         }
         &.shown{ top: 0; }
         @media (min-width: 991.98px) {
@@ -139,7 +139,7 @@ header
 hero
 ********************/
 .hero{ width: 100vw; margin-top: 5rem;
-  &__wrapper{ width: calc(100% - 10rem); margin: 0 auto; border-radius: 3rem; background-color: #f0f7fc;
+  &__wrapper{ width: calc(100% - 10rem); margin: 0 auto; border-radius: 3rem; background-color: #e3c45a;
     padding: 18.4rem 0 9.9rem 0;
   }
   .main-heading{ font-size: 8rem; font-weight: 600; color: $color-black; letter-spacing: -0.4rem; width: 100%; }
@@ -339,7 +339,7 @@ video
 growth
 ********************/
 .growth{ width: 100vw;
-  &__wrapper{ background-color: #f0f7fc; padding: $section-padding 0; width: calc(100% - 10rem); margin: 0 auto;
+  &__wrapper{ background-color: #e3c45a; padding: $section-padding 0; width: calc(100% - 10rem); margin: 0 auto;
     border-radius: 3rem;
   }
   .section-heading{ text-align: center; margin: 0 auto 5rem auto; }
@@ -568,7 +568,7 @@ questions
         line-height: 3rem; position: relative;
       }
       &::before{ content: "\f056"; font-family: "Font Awesome 5 Pro"; font-weight: 900; font-size: 2.2rem;
-        color: #f41a77; position: absolute; top: 50%; left: -1.2rem; transform: translateY(-50%); -webkit-transform: translateY(-50%); 
+        color: #056134; position: absolute; top: 50%; left: -1.2rem; transform: translateY(-50%); -webkit-transform: translateY(-50%); 
         display: inline-block; } 
       &.hidden{
         &::before{ content: "\f055"; 
@@ -739,7 +739,7 @@ pricing
 screenshot
 ********************/
 .screenshot{ width: 100vw;
-  &__wrapper{ background-color: #f0f7fc; margin: 0 auto; overflow: visible; padding: $section-padding 0;
+  &__wrapper{ background-color: #e3c45a; margin: 0 auto; overflow: visible; padding: $section-padding 0;
     width: calc(100% - 10rem); margin: 0 auto; border-radius: 3rem;
   }
   &-slider{ width: 100vw; margin-top: 9.8rem; margin-left: -2.5%; overflow: visible !important; }
@@ -864,7 +864,7 @@ footer
 ********************/
 .footer{ width: 100vw; margin-top: 3rem; margin-bottom: 5rem;
   &__wrapper{ padding: $section-padding 0; width: calc(100% - 10rem); margin: 0 auto; border-radius: 3rem; 
-    background-color: #f0f7fc; }
+    background-color: #e3c45a; }
   &__info{
     &--logo{ margin-bottom: 5.6rem; }
     &--content{ .paragraph{ width: 76%; margin-bottom: 3rem; } }
