--- a/assets/sass/_blog-single.scss
+++ b/assets/sass/_blog-single.scss
@@ -117,7 +117,7 @@ blog single
             h3{ font-size: 3rem; font-weight: 600; letter-spacing: -.4px; color: $color-black; margin-bottom: 5rem; }
             .input-field{ border-color: #e3c45a; &:focus{ border-color: #c9deed; } }
             .button{ border-color: #ffdbe8; cursor: pointer;
-                i{ color: #f2046c; }
+                i{ color: #056134; }
                 background: rgb(19,105,236);
                 background: linear-gradient(0deg, rgba(19,105,236,0) 0%, rgba(255,177,107,0) 50%, 
             rgb(242, 2, 107) 51%, rgba(255,138,175,1) 100%); 
