--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -957,8 +957,8 @@ ul {
     -webkit-transition: all .25s ease;
     transition: all .25s ease;
     background: #1369ec;
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(19, 105, 236, 0)), color-stop(50%, rgba(255, 177, 107, 0)), color-stop(51%, #f2026b), to(#ff8aaf));
-    background: linear-gradient(0deg, rgba(19, 105, 236, 0) 0%, rgba(255, 177, 107, 0) 50%, #f2026b 51%, #ff8aaf 100%);
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(19, 105, 236, 0)), color-stop(50%, rgba(255, 177, 107, 0)), color-stop(51%, #056134), to(#ff8aaf));
+    background: linear-gradient(0deg, rgba(19, 105, 236, 0) 0%, rgba(255, 177, 107, 0) 50%, #05613451%, #ff8aaf 100%);
     background-size: 200% 200%;
     background-position: center bottom;
     -webkit-transform: var(--transform-fix);
@@ -1690,7 +1690,7 @@ body.loaded .preloader {
 }
 
 .hero .main-heading {
-    font-size: 8rem;
+    font-size: 6rem;
     font-weight: 600;
     color: #000;
     letter-spacing: -0.4rem;
@@ -1728,21 +1728,21 @@ body.loaded .preloader {
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    background: #9341d4;
-    background: linear-gradient(45deg, #9341d4 0%, #d98efb 50%, #9341d4 100%);
+    background: #056134;
+    background: linear-gradient(45deg, #056134 0%, #e3c45a 25%, #10130e 50%, #5f632a 75%, #98371b 100%);
     background-size: 200% 200%;
     background-position: left bottom;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
     perspective: 1000;
-    filter: drop-shadow(0px 30px 20px rgba(147, 65, 212, 0.4));
-    -webkit-filter: drop-shadow(0px 30px 20px rgba(147, 65, 212, 0.4));
-    -moz-filter: drop-shadow(0px 30px 20px rgba(147, 65, 212, 0.4));
+    filter: drop-shadow(0px 30px 20px rgba(#10221f, 0.4));
+    -webkit-filter: drop-shadow(0px 30px 20px rgba(#10221f, 0.4));
+    -moz-filter: drop-shadow(0px 30px 20px rgba(#10221f, 0.4));
     -webkit-animation-name: animateGradient;
     animation-name: animateGradient;
-    -webkit-animation-duration: 2.5s;
-    animation-duration: 2.5s;
+    -webkit-animation-duration: 50.5s;
+    animation-duration: 50.5s;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite
 }
@@ -1922,19 +1922,19 @@ body.loaded .preloader {
 }
 
 .feature__box--1 .feature__box__wrapper {
-    background-color: #efdff7
+    background-color: #056134;
 }
 
 .feature__box--2 .feature__box__wrapper {
-    background-color: #ffe8c6
+    background-color: #e3c45a;
 }
 
 .feature__box--3 .feature__box__wrapper {
-    background-color: #d0f3f2
+    background-color: #10130e;
 }
 
 .feature__box--4 .feature__box__wrapper {
-    background-color: #ffdae8
+    background-color: #5f632a;
 }
 
 .feature__box .icon {
@@ -1950,75 +1950,71 @@ body.loaded .preloader {
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center
+    align-items: center;
 }
 
 .feature__box .icon-1 {
-    background: #9341d4;
-    background: linear-gradient(45deg, #9341d4 0%, #d98efb 100%);
-    filter: drop-shadow(0px 40px 15px rgba(147, 65, 212, 0.4));
-    -webkit-filter: drop-shadow(0px 40px 15px rgba(147, 65, 212, 0.4));
-    -moz-filter: drop-shadow(0px 40px 15px rgba(147, 65, 212, 0.4));
+    background: #98371b;
+    filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
+    -webkit-filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
+    -moz-filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .feature__box .icon-2 {
-    background: #ffdb8d;
-    background: linear-gradient(45deg, #ffb16b 0%, #ffdb8d 100%);
-    filter: drop-shadow(0px 40px 15px rgba(255, 186, 114, 0.4));
-    -webkit-filter: drop-shadow(0px 40px 15px rgba(255, 186, 114, 0.4));
-    -moz-filter: drop-shadow(0px 40px 15px rgba(255, 186, 114, 0.4));
+    background: #10221f;
+    filter: drop-shadow(0px 40px 15px rgba(229, 166, 29, 0.4));
+    -webkit-filter: drop-shadow(0px 40px 15px rgba(229, 166, 29, 0.4));
+    -moz-filter: drop-shadow(0px 40px 15px rgba(229, 166, 29, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .feature__box .icon-3 {
-    background: #63e8e4;
-    background: linear-gradient(45deg, #19a5a1 0%, #63e8e4 100%);
-    filter: drop-shadow(0px 40px 15px rgba(79, 188, 186, 0.4));
-    -webkit-filter: drop-shadow(0px 40px 15px rgba(79, 188, 186, 0.4));
-    -moz-filter: drop-shadow(0px 40px 15px rgba(79, 188, 186, 0.4));
+    background: #e5a61d;
+    filter: drop-shadow(0px 40px 15px rgba(5, 97, 52, 0.4));
+    -webkit-filter: drop-shadow(0px 40px 15px rgba(5, 97, 52, 0.4));
+    -moz-filter: drop-shadow(0px 40px 15px rgba(5, 97, 52, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .feature__box .icon-4 {
-    background: #ff8aaf;
-    background: linear-gradient(45deg, #f2026b 0%, #ff8aaf 100%);
-    filter: drop-shadow(0px 40px 15px rgba(245, 69, 144, 0.4));
-    -webkit-filter: drop-shadow(0px 40px 15px rgba(245, 69, 144, 0.4));
-    -moz-filter: drop-shadow(0px 40px 15px rgba(245, 69, 144, 0.4));
+    background: #5f632a;
+    filter: drop-shadow(0px 40px 15px rgba(152, 55, 27, 0.4));
+    -webkit-filter: drop-shadow(0px 40px 15px rgba(152, 55, 27, 0.4));
+    -moz-filter: drop-shadow(0px 40px 15px rgba(152, 55, 27, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .feature__box .icon i {
     font-size: 8rem;
-    color: white
+    color: white;
 }
 
 .feature__box__wrapper {
     width: 100%;
     padding: 5.7rem .5rem .5rem .5rem;
     border-radius: 2.5rem;
-    margin-top: 5rem
+    margin-top: 5rem;
 }
 
 .feature__box--content {
@@ -2026,7 +2022,7 @@ body.loaded .preloader {
     position: relative;
     padding: 3.7rem 2rem 2.1rem 2rem;
     border-radius: 2rem;
-    text-align: center
+    text-align: center;
 }
 
 .feature__box--content::before {
@@ -2116,8 +2112,8 @@ body.loaded .preloader {
     width: 77.6rem;
     height: 77.6rem;
     border-radius: 50%;
-    background: #9341d4;
-    background: linear-gradient(45deg, #9341d4 0%, #d98efb 50%, #9341d4 100%);
+    background: #056134;
+    background: linear-gradient(45deg, #056134 0%, #e3c45a 20%, #10130e 40%, #5f632a 60%, #98371b 80%, #10221f 100%);
     background-size: 200% 200%;
     background-position: left bottom;
     -webkit-animation-name: animateGradient;
@@ -2125,11 +2121,11 @@ body.loaded .preloader {
     -webkit-animation-duration: 2.5s;
     animation-duration: 2.5s;
     -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite
+    animation-iteration-count: infinite;
 }
 
 .video__play {
-    z-index: 100
+    z-index: 100;
 }
 
 .video__play>button {
@@ -2138,9 +2134,9 @@ body.loaded .preloader {
     border-radius: 50%;
     border: 0;
     outline: 0;
-    background: #1369ec;
+    background: #e5a61d;
     cursor: pointer;
-    background: linear-gradient(45deg, #1369ec 0%, #65bef4 50%, #1369ec 100%);
+    background: linear-gradient(45deg, #e5a61d 0%, #056134 50%, #e5a61d 100%);
     background-size: 200% 200%;
     background-position: left bottom;
     position: absolute;
@@ -2149,26 +2145,26 @@ body.loaded .preloader {
     z-index: 20;
     -webkit-transition: all .25s ease;
     transition: all .25s ease;
-    filter: drop-shadow(0px 40px 15px rgba(34, 120, 237, 0.4));
-    -webkit-filter: drop-shadow(0px 40px 15px rgba(34, 120, 237, 0.4));
-    -moz-filter: drop-shadow(0px 40px 15px rgba(34, 120, 237, 0.4));
+    filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
+    -webkit-filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
+    -moz-filter: drop-shadow(0px 40px 15px rgba(16, 34, 31, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .video__play>button:hover {
-    background-position: right top
+    background-position: right top;
 }
 
 .video__play>button i {
     font-size: 6.5rem;
     color: white;
     -webkit-transition: all .25s ease;
-    transition: all .25s ease
+    transition: all .25s ease;
 }
 
 .video__play .modal-close {
@@ -2177,20 +2173,20 @@ body.loaded .preloader {
     right: -2.5rem;
     width: 5rem;
     height: 5rem;
-    z-index: 50
+    z-index: 50;
 }
 
 .video__play .modal-close:hover button {
-    background-color: white
+    background-color: #5f632a;
 }
 
 .video__play .modal-close:hover button i {
-    color: #c274ee
+    color: #e3c45a;
 }
 
 .video__play .modal-close button {
     border: 0;
-    background-color: #c274ee;
+    background-color: #98371b;
     border-radius: 50%;
     width: 100%;
     height: 100%;
@@ -2206,15 +2202,16 @@ body.loaded .preloader {
     align-items: center;
     -webkit-transition: all .25s ease;
     transition: all .25s ease;
-    border: 2px solid #c274ee
+    border: 2px solid #10221f;
 }
 
 .video__play .modal-close button i {
     font-size: 2rem;
     color: white;
     -webkit-transition: all .25s ease;
-    transition: all .25s ease
+    transition: all .25s ease;
 }
+
 
 .video__play iframe {
     width: 100%;
@@ -2307,13 +2304,13 @@ body.loaded .preloader {
 .growth__box .icon {
     width: 11.9rem;
     height: 11.9rem;
-    background: #daecf9;
-    background: -webkit-gradient(linear, left bottom, left top, from(#daecf9), to(#fff));
-    background: linear-gradient(0deg, #daecf9 0%, #fff 100%);
+    background: #056134;
+    background: -webkit-gradient(linear, left bottom, left top, from(#056134), to(#e3c45a));
+    background: linear-gradient(0deg, #056134 0%, #e3c45a 100%);
     border-radius: 50%;
-    filter: drop-shadow(0px 30px 20px rgba(42, 129, 238, 0.2));
-    -webkit-filter: drop-shadow(0px 30px 20px rgba(42, 129, 238, 0.2));
-    -moz-filter: drop-shadow(0px 30px 20px rgba(42, 129, 238, 0.2));
+    filter: drop-shadow(0px 30px 20px rgba(16, 34, 31, 0.2));
+    -webkit-filter: drop-shadow(0px 30px 20px rgba(16, 34, 31, 0.2));
+    -moz-filter: drop-shadow(0px 30px 20px rgba(16, 34, 31, 0.2));
     position: relative;
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
@@ -2322,26 +2319,27 @@ body.loaded .preloader {
     -webkit-perspective: 1000;
     perspective: 1000;
     -webkit-transition: all .25s ease;
-    transition: all .25s ease
+    transition: all .25s ease;
 }
 
 .growth__box .icon i {
     font-size: 5rem;
-    color: #3890f0;
+    color: #5f632a;
     position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
 .growth__box .content {
     width: 72%;
-    background-color: white;
+    background-color: #e5a61d;
     position: relative;
     border-radius: 2rem;
-    padding: 3.7rem 6.2rem 2.5rem 4rem
+    padding: 3.7rem 6.2rem 2.5rem 4rem;
 }
+
 
 .growth__box .content h3 {
     font-size: 2.2rem;
@@ -2407,9 +2405,9 @@ body.loaded .preloader {
 }
 
 .growth .button__wrapper a {
-    background: #1369ec;
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(19, 105, 236, 0)), color-stop(50%, rgba(255, 177, 107, 0)), color-stop(51%, #1369ec), to(#65bef4));
-    background: linear-gradient(0deg, rgba(19, 105, 236, 0) 0%, rgba(255, 177, 107, 0) 50%, #1369ec 51%, #65bef4 100%);
+    background: #056134;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(5, 97, 52, 0)), color-stop(50%, rgba(227, 196, 90, 0)), color-stop(51%, #056134), to(#e3c45a));
+    background: linear-gradient(0deg, rgba(5, 97, 52, 0) 0%, rgba(227, 196, 90, 0) 50%, #056134 51%, #e3c45a 100%);
     background-size: 200% 200%;
     background-position: center bottom;
     -webkit-transform: var(--transform-fix);
@@ -2417,22 +2415,23 @@ body.loaded .preloader {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000;
-    perspective: 1000
+    perspective: 1000;
 }
 
 .growth .button__wrapper a:hover {
     background-position: center top;
     border: none;
-    filter: drop-shadow(0px 10px 20px rgba(33, 120, 237, 0.4));
-    -webkit-filter: drop-shadow(0px 10px 20px rgba(33, 120, 237, 0.4));
-    -moz-filter: drop-shadow(0px 10px 20px rgba(33, 120, 237, 0.4))
+    filter: drop-shadow(0px 10px 20px rgba(16, 34, 31, 0.4));
+    -webkit-filter: drop-shadow(0px 10px 20px rgba(16, 34, 31, 0.4));
+    -moz-filter: drop-shadow(0px 10px 20px rgba(16, 34, 31, 0.4));
 }
 
 @media (min-width: 991.98px) and (max-width: 1200px) {
     .growth__box .content {
-        width: 68%
+        width: 68%;
     }
 }
+
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     .growth__wrapper {
@@ -2948,8 +2947,8 @@ body.loaded .preloader {
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    background: #f2026b;
-    background: linear-gradient(45deg, #f2026b 0%, #ff8aaf 50%, #f2026b 100%);
+    background: #056134;
+    background: linear-gradient(45deg, #0561340%, #ff8aaf 50%, #056134100%);
     background-size: 200% 200%;
     background-position: left bottom;
     filter: drop-shadow(0px 5px 40px #f54590);
@@ -3198,11 +3197,10 @@ body.loaded .preloader {
 }
 
 .pricing__single-1 {
-    background: #9341d4;
-    background: linear-gradient(45deg, #9341d4 0%, #d98efb 100%);
-    filter: drop-shadow(0px 20px 10px rgba(147, 65, 212, 0.4));
-    -webkit-filter: drop-shadow(0px 20px 10px rgba(147, 65, 212, 0.4));
-    -moz-filter: drop-shadow(0px 20px 10px rgba(147, 65, 212, 0.4));
+    background: #056134; /* Dark Green */
+    filter: drop-shadow(0px 20px 10px rgba(5, 97, 52, 0.4));
+    -webkit-filter: drop-shadow(0px 20px 10px rgba(5, 97, 52, 0.4));
+    -moz-filter: drop-shadow(0px 20px 10px rgba(5, 97, 52, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
@@ -3212,23 +3210,22 @@ body.loaded .preloader {
 }
 
 .pricing__single-1 .icon i {
-    color: #c67af1
+    color: #e3c45a; /* Gold */
 }
 
 .pricing__single-1 h6 {
-    color: #f0d6fd
+    color: #10130e; /* Almost Black */
 }
 
 .pricing__single-1 .list ul li::before {
-    color: #c67af1
+    color: #5f632a; /* Olive Drab */
 }
 
 .pricing__single-2 {
-    background: #1369ec;
-    background: linear-gradient(45deg, #1369ec 0%, #65bef4 100%);
-    filter: drop-shadow(0px 20px 10px rgba(33, 120, 237, 0.4));
-    -webkit-filter: drop-shadow(0px 20px 10px rgba(33, 120, 237, 0.4));
-    -moz-filter: drop-shadow(0px 20px 10px rgba(33, 120, 237, 0.4));
+    background: #98371b; /* Dark Orange */
+    filter: drop-shadow(0px 20px 10px rgba(152, 55, 27, 0.4));
+    -webkit-filter: drop-shadow(0px 20px 10px rgba(152, 55, 27, 0.4));
+    -moz-filter: drop-shadow(0px 20px 10px rgba(152, 55, 27, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
@@ -3238,23 +3235,22 @@ body.loaded .preloader {
 }
 
 .pricing__single-2 .icon i {
-    color: #3890f0
+    color: #10221f; /* Very Dark Green */
 }
 
 .pricing__single-2 h6 {
-    color: #bcddf5
+    color: #e5a61d; /* Orange */
 }
 
 .pricing__single-2 .list ul li::before {
-    color: #3890f0
+    color: #056134; /* Dark Green */
 }
 
 .pricing__single-3 {
-    background: #19a5a1;
-    background: linear-gradient(45deg, #19a5a1 0%, #63e8e4 100%);
-    filter: drop-shadow(0px 20px 10px rgba(79, 188, 186, 0.4));
-    -webkit-filter: drop-shadow(0px 20px 10px rgba(79, 188, 186, 0.4));
-    -moz-filter: drop-shadow(0px 20px 10px rgba(79, 188, 186, 0.4));
+    background: #e3c45a; /* Gold */
+    filter: drop-shadow(0px 20px 10px rgba(227, 196, 90, 0.4));
+    -webkit-filter: drop-shadow(0px 20px 10px rgba(227, 196, 90, 0.4));
+    -moz-filter: drop-shadow(0px 20px 10px rgba(227, 196, 90, 0.4));
     -webkit-transform: var(--transform-fix);
     transform: var(--transform-fix);
     -webkit-backface-visibility: hidden;
@@ -3264,15 +3260,17 @@ body.loaded .preloader {
 }
 
 .pricing__single-3 .icon i {
-    color: #2db7b3
+    color: #10130e; /* Almost Black */
 }
 
 .pricing__single-3 h6 {
-    color: #c9f7f6
+    color: #5f632a; /* Olive Drab */
 }
 
 .pricing__single-3 .list ul li::before {
-    color: #2db7b3
+    color: #98371b; /* Dark Orange */
+}
+
 }
 
 @media (max-width: 991.98px) {
@@ -3359,7 +3357,7 @@ body.loaded .preloader {
 
 .screenshot-nav-prev:hover i,
 .screenshot-nav-next:hover i {
-    color: #ff0087
+    color: #056134
 }
 
 .screenshot-nav-prev:focus,
@@ -3420,7 +3418,7 @@ body.loaded .preloader {
 }
 
 .related-blog .button i {
-    color: #f2046c;
+    color: #056134;
     -webkit-transition: all .25s ease;
     transition: all .25s ease
 }
@@ -3482,12 +3480,12 @@ body.loaded .preloader {
 .newsletter__info button {
     width: 23.1rem;
     margin-left: 1rem;
-    background: #f2026b;
+    background: #056134;
     -webkit-transition: all .25s ease;
     transition: all .25s ease;
     color: white;
-    background: -webkit-gradient(linear, left bottom, left top, from(#f2026b), color-stop(50%, #ff8aaf), to(#f2026b));
-    background: linear-gradient(0deg, #f2026b 0%, #ff8aaf 50%, #f2026b 100%);
+    background: -webkit-gradient(linear, left bottom, left top, from(#056134), color-stop(50%, #ff8aaf), to(#056134));
+    background: linear-gradient(0deg, #0561340%, #ff8aaf 50%, #056134100%);
     border: none;
     background-size: 200% 200%;
     background-position: bottom;
