--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -49,7 +49,7 @@ blog
     }
     .button{ margin: 10rem auto 0 auto; display: flex; }
     .button{ border: 4px solid #ffdbe8;
-        i{ color: #f2046c; @include animateIt; } 
+        i{ color: #056134; @include animateIt; } 
         &:focus, &:hover{ background-color: #ffdbe8; i{ color: white; } }
         background: rgb(19,105,236);
       background: linear-gradient(0deg, rgba(19,105,236,0) 0%, rgba(255,177,107,0) 50%, 
